fix(security): 收敛验证码与会话安全边界